fixed date, validators, css spacing, p shortened

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,9 +3,9 @@
 }
 
 .container {
-	width: 80%;
+	width: 90%;
 	margin: 0 auto;
-	padding-top: 30px;
+	padding-top: 14px;
 }
 
 .brand-logo {
@@ -40,6 +40,7 @@ nav .brand-logo {
 
 nav ul a {
 	color: black;
+	padding: 0 50px 0 0;
 }
 
 nav ul a:hover {
@@ -50,8 +51,6 @@ nav ul a.btn {
 	margin-left: 0;
 	margin-right: 0;
 }
-
-/*add spacing between buttons*/
 
 .dropdown-button {
 	background-color: #fc6d6f;
@@ -141,10 +140,11 @@ p {
 	font-weight: 350;
 	color: black !important;
 	padding-bottom: 10px;
+	white-space: pre-line;
 }
 
 .blue-grey.darken-1:nth-of-type(odd) {
-	background-color: #e9e9e9 !important;
+	background-color: #feeced !important;
 	width: 30%;
 	margin-right: 1%;
 	margin-left: 1%;
@@ -174,6 +174,20 @@ p {
 
 .card .card-action {
 	padding: 10px 20px;
+}
+
+.card .card-content p {
+    display: block;
+    display: -webkit-box;
+    max-width: 400px;
+    height: 250px;
+    margin: 0 auto;
+    font-size: 14px;
+    line-height: 1.5;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 h1 {
@@ -235,7 +249,7 @@ h1 {
 
 #signupForm, #loginForm, #newStory {
 	padding: 10px 40px 10px 35px;
-	margin-top: 30px;
+	margin-top: 40px;
 	margin-bottom: 30px;
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 	background-color: #feeced;
@@ -296,7 +310,7 @@ footer {
     }
 
     .container .row {
-    	margin-right: -120px;
+    	margin-right: 0px;
     }
 }
 
